--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "express-ws": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2"
   },
